--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,7 +2,8 @@
     @apply shadow-sm border-gray-300 rounded-md;
 }
 .bg-blue-1 {
-    background-color: rgb(53 53 157);
+    /* background-color: rgb(53 53 157); */
+    background-color: #1539af;
 }
 
 /* tooltip */
