--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -35,3 +35,18 @@
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+
+/* scrollbar */
+body::-webkit-scrollbar, .overflow-y-scroll::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track, .overflow-y-scroll::-webkit-scrollbar-track {
+    background: transparent;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb, .overflow-y-scroll::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 179, 179);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid white;  /* creates padding around scroll thumb */
+  }
