--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -54,3 +54,34 @@ body::-webkit-scrollbar, .overflow-y-scroll::-webkit-scrollbar {
   .blur{
       filter: opacity(0.01);
   }
+
+  .parpadea {
+  
+    animation-name: parpadeo;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  
+    -webkit-animation-name:parpadeo;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+  }
+  
+  @-moz-keyframes parpadeo{  
+    0% { opacity: 1.0; }
+    90% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+  }
+  
+  @-webkit-keyframes parpadeo {  
+    0% { opacity: 1.0; }
+    90% { opacity: 0.0; }
+     100% { opacity: 1.0; }
+  }
+  
+  @keyframes parpadeo {  
+    0% { opacity: 1.0; }
+     90% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+  }
