--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1493,6 +1493,9 @@ select {
 .max-w-5xl {
 	max-width: 64rem;
 }
+.max-w-lg {
+	max-width: 32rem;
+}
 .max-w-3xl {
 	max-width: 48rem;
 }
@@ -1632,6 +1635,9 @@ select {
 }
 .gap-1 {
 	gap: 0.25rem;
+}
+.gap-7 {
+	gap: 1.75rem;
 }
 .gap-y-4 {
 	row-gap: 1rem;
@@ -1991,6 +1997,19 @@ select {
 .bg-opacity-20 {
 	--tw-bg-opacity: 0.2;
 }
+.bg-gradient-to-l {
+	background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+.bg-gradient-to-r {
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.from-purple-500 {
+	--tw-gradient-from: #8b5cf6;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(139, 92, 246, 0));
+}
+.to-blue-700 {
+	--tw-gradient-to: #1d4ed8;
+}
 .bg-cover {
 	background-size: cover;
 }
@@ -2023,6 +2042,9 @@ select {
 }
 .p-3 {
 	padding: 0.75rem;
+}
+.p-5 {
+	padding: 1.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2087,6 +2109,14 @@ select {
 .px-16 {
 	padding-left: 4rem;
 	padding-right: 4rem;
+}
+.py-0\.5 {
+	padding-top: 0.125rem;
+	padding-bottom: 0.125rem;
+}
+.py-0 {
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2362,6 +2392,10 @@ select {
 .text-yellow-600 {
 	--tw-text-opacity: 1;
 	color: rgba(217, 119, 6, var(--tw-text-opacity));
+}
+.text-yellow-300 {
+	--tw-text-opacity: 1;
+	color: rgba(252, 211, 77, var(--tw-text-opacity));
 }
 .text-yellow-400 {
 	--tw-text-opacity: 1;
@@ -2881,6 +2915,14 @@ a[href*="intent"] {
 		grid-column: span 4 / span 4;
 	}
 
+	.sm\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.sm\:row-span-3 {
+		grid-row: span 3 / span 3;
+	}
+
 	.sm\:mx-0 {
 		margin-left: 0px;
 		margin-right: 0px;
@@ -2997,6 +3039,14 @@ a[href*="intent"] {
 
 	.sm\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
+	.sm\:grid-rows-3 {
+		grid-template-rows: repeat(3, minmax(0, 1fr));
 	}
 
 	.sm\:items-center {
