--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1469,6 +1469,15 @@ select {
 .w-1\/3 {
 	width: 33.333333%;
 }
+.w-36 {
+	width: 9rem;
+}
+.w-64 {
+	width: 16rem;
+}
+.w-11\/12 {
+	width: 91.666667%;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1814,6 +1823,9 @@ select {
 .border-b-4 {
 	border-bottom-width: 4px;
 }
+.border-none {
+	border-style: none;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1984,6 +1996,10 @@ select {
 .bg-green-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -2790,6 +2806,9 @@ a[href*="intent"] {
 .focus\:z-10:focus {
 	z-index: 10;
 }
+.focus\:border-none:focus {
+	border-style: none;
+}
 .focus\:border-blue-300:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(147, 197, 253, var(--tw-border-opacity));
@@ -2857,6 +2876,11 @@ a[href*="intent"] {
 .focus\:ring:focus {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring-0:focus {
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .focus\:ring-gray-300:focus {
