--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -120,7 +120,7 @@ body::-webkit-scrollbar, .overflow-y-scroll::-webkit-scrollbar {
     -moz-transition: color .4s;
     -o-transition: color .4s;
     transition: color .4s;
-    font-size: 2.5rem;
+    @apply text-2xl md:text-4xl;
   }
 .rating label:hover ~ label,
 .rating input:focus ~ label,
