--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.1.1 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /*
 Document
@@ -10,8 +10,8 @@ Use a better box model (opinionated).
 */
 
 *,
-*::before,
-*::after {
+::before,
+::after {
 	box-sizing: border-box;
 }
 
@@ -19,7 +19,7 @@ Use a better box model (opinionated).
 Use a more readable tab size (opinionated).
 */
 
-:root {
+html {
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	   tab-size: 4;
@@ -328,16 +328,6 @@ button {
   background-image: none;
 }
 
-/**
- * Work around a Firefox/IE bug where the transparent `button` background
- * results in a loss of the default `button` focus styles.
- */
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
 fieldset {
   margin: 0;
   padding: 0;
@@ -409,7 +399,7 @@ body {
   box-sizing: border-box; /* 1 */
   border-width: 0; /* 2 */
   border-style: solid; /* 2 */
-  border-color: #e5e7eb; /* 2 */
+  border-color: currentColor; /* 2 */
 }
 
 /*
@@ -457,6 +447,18 @@ textarea::placeholder {
 button,
 [role="button"] {
   cursor: pointer;
+}
+
+/**
+ * Override legacy focus reset from Normalize with modern Firefox focus styles.
+ *
+ * This is actually an improvement over the new defaults in Firefox in our testing,
+ * as it triggers the better focus styles even for links, which still use a dotted
+ * outline in Firefox by default.
+ */
+ 
+:-moz-focusring {
+	outline: auto;
 }
 
 table {
@@ -516,11 +518,20 @@ samp {
 }
 
 /**
- * Make replaced elements `display: block` by default as that's
- * the behavior you want almost all of the time. Inspired by
- * CSS Remedy, with `svg` added as well.
+ * 1. Make replaced elements `display: block` by default as that's
+ *    the behavior you want almost all of the time. Inspired by
+ *    CSS Remedy, with `svg` added as well.
  *
- * https://github.com/mozdevs/cssremedy/issues/14
+ *    https://github.com/mozdevs/cssremedy/issues/14
+ * 
+ * 2. Add `vertical-align: middle` to align replaced elements more
+ *    sensibly by default when overriding `display` by adding a
+ *    utility like `inline`.
+ *
+ *    This can trigger a poorly considered linting error in some
+ *    tools but is included by design.
+ * 
+ *    https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
  */
 
 img,
@@ -531,8 +542,8 @@ audio,
 iframe,
 embed,
 object {
-  display: block;
-  vertical-align: middle;
+  display: block; /* 1 */
+  vertical-align: middle; /* 2 */
 }
 
 /**
@@ -548,7 +559,27 @@ video {
   height: auto;
 }
 
-* {
+/**
+ * Ensure the default browser behavior of the `hidden` attribute.
+ */
+
+[hidden] {
+  display: none;
+}
+
+*, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
 	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
 	--tw-ring-offset-width: 0px;
@@ -556,6 +587,17 @@ video {
 	--tw-ring-color: rgba(59, 130, 246, 0.5);
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
+	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
+	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
+	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
+	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
+	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
+	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
+	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
+	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 
@@ -1069,16 +1111,17 @@ select {
 .pointer-events-none {
 	pointer-events: none;
 }
-.relative {
-	position: relative;
+.fixed {
+	position: fixed;
 }
 .absolute {
 	position: absolute;
 }
-.fixed {
-	position: fixed;
+.relative {
+	position: relative;
 }
 .sticky {
+	position: -webkit-sticky;
 	position: sticky;
 }
 .inset-0 {
@@ -1114,23 +1157,14 @@ select {
 .-left-2 {
 	left: -0.5rem;
 }
-.bottom-3 {
-	bottom: 0.75rem;
+.top-8 {
+	top: 2rem;
 }
 .left-2 {
 	left: 0.5rem;
 }
-.top-3 {
-	top: 0.75rem;
-}
-.top-6 {
-	top: 1.5rem;
-}
-.top-10 {
-	top: 2.5rem;
-}
-.top-8 {
-	top: 2rem;
+.bottom-3 {
+	bottom: 0.75rem;
 }
 .z-0 {
 	z-index: 0;
@@ -1463,8 +1497,8 @@ select {
 .w-80 {
 	width: 20rem;
 }
-.w-4\/12 {
-	width: 33.333333%;
+.w-64 {
+	width: 16rem;
 }
 .w-11 {
 	width: 2.75rem;
@@ -1486,12 +1520,6 @@ select {
 }
 .w-1\/3 {
 	width: 33.333333%;
-}
-.w-56 {
-	width: 14rem;
-}
-.w-64 {
-	width: 16rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1532,16 +1560,6 @@ select {
 .table-auto {
 	table-layout: auto;
 }
-.transform {
-	--tw-translate-x: 0;
-	--tw-translate-y: 0;
-	--tw-rotate: 0;
-	--tw-skew-x: 0;
-	--tw-skew-y: 0;
-	--tw-scale-x: 1;
-	--tw-scale-y: 1;
-	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .origin-top-left {
 	transform-origin: top left;
 }
@@ -1553,23 +1571,32 @@ select {
 }
 .translate-y-4 {
 	--tw-translate-y: 1rem;
+	transform: var(--tw-transform);
 }
 .translate-y-0 {
 	--tw-translate-y: 0px;
+	transform: var(--tw-transform);
 }
 .translate-x-1\/2 {
 	--tw-translate-x: 50%;
+	transform: var(--tw-transform);
 }
 .-translate-y-1\/2 {
 	--tw-translate-y: -50%;
+	transform: var(--tw-transform);
 }
 .scale-95 {
 	--tw-scale-x: .95;
 	--tw-scale-y: .95;
+	transform: var(--tw-transform);
 }
 .scale-100 {
 	--tw-scale-x: 1;
 	--tw-scale-y: 1;
+	transform: var(--tw-transform);
+}
+.transform {
+	transform: var(--tw-transform);
 }
 @-webkit-keyframes bounce {
 
@@ -1636,20 +1663,20 @@ select {
 .flex-wrap {
 	flex-wrap: wrap;
 }
-.items-center {
-	align-items: center;
-}
 .items-start {
 	align-items: flex-start;
 }
-.justify-between {
-	justify-content: space-between;
+.items-center {
+	align-items: center;
+}
+.justify-end {
+	justify-content: flex-end;
 }
 .justify-center {
 	justify-content: center;
 }
-.justify-end {
-	justify-content: flex-end;
+.justify-between {
+	justify-content: space-between;
 }
 .gap-6 {
 	gap: 1.5rem;
@@ -1728,28 +1755,28 @@ select {
 .overflow-hidden {
 	overflow: hidden;
 }
-.overflow-y-hidden {
-	overflow-y: hidden;
+.overflow-x-auto {
+	overflow-x: auto;
 }
 .overflow-y-auto {
 	overflow-y: auto;
 }
+.overflow-y-hidden {
+	overflow-y: hidden;
+}
 .overflow-y-scroll {
 	overflow-y: scroll;
-}
-.overflow-x-auto {
-	overflow-x: auto;
 }
 .truncate {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.whitespace-pre-line {
-	white-space: pre-line;
-}
 .whitespace-nowrap {
 	white-space: nowrap;
+}
+.whitespace-pre-line {
+	white-space: pre-line;
 }
 .break-all {
 	word-break: break-all;
@@ -2057,16 +2084,13 @@ select {
 .bg-no-repeat {
 	background-repeat: no-repeat;
 }
-.fill-current {
-	fill: currentColor;
+.object-contain {
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
-}
-.object-contain {
-	-o-object-fit: contain;
-	   object-fit: contain;
 }
 .object-center {
 	-o-object-position: center;
@@ -2210,14 +2234,14 @@ select {
 .pr-44 {
 	padding-right: 11rem;
 }
+.text-left {
+	text-align: left;
+}
 .text-center {
 	text-align: center;
 }
 .text-right {
 	text-align: right;
-}
-.text-left {
-	text-align: left;
 }
 .align-top {
 	vertical-align: top;
@@ -2472,9 +2496,6 @@ select {
 .opacity-25 {
 	opacity: 0.25;
 }
-.opacity-5 {
-	opacity: 0.05;
-}
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2515,26 +2536,20 @@ select {
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
 }
-.filter {
-	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
-	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
-	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
-	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
-	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
-	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
-	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
-	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
-	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
-	filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 .blur {
 	--tw-blur: blur(8px);
+	filter: var(--tw-filter);
 }
 .blur-md {
 	--tw-blur: blur(12px);
+	filter: var(--tw-filter);
 }
 .drop-shadow {
 	--tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
+	filter: var(--tw-filter);
+}
+.filter {
+	filter: var(--tw-filter);
 }
 .transition {
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -2549,9 +2564,6 @@ select {
 	transition-duration: 150ms;
 }
 .duration-150 {
-	transition-duration: 150ms;
-}
-.duration {
 	transition-duration: 150ms;
 }
 .duration-200 {
@@ -2576,8 +2588,8 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 80rem;
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 @media (min-width: 640px) {
 
@@ -2723,21 +2735,21 @@ a[href*="intent"] {
     color: #aaa;
     text-decoration: none;
     transition: color .4s;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
+@media (min-width: 768px) {
+
+	.rating a, .rating label {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+}
 .rating label:hover ~ label, .rating input:focus ~ label, .rating label:hover, .rating .star:hover, .rating .star:hover ~ a, .rating .star:focus, .rating .star:focus ~ a {
 	--tw-text-opacity: 1;
 	color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-.rating label:hover ~ label,
-.rating input:focus ~ label,
-.rating label:hover,
-  .rating .star:hover,
-  .rating .star:hover ~ a,
-  .rating .star:focus,
-  .rating .star:focus ~ a		{
     cursor: pointer;
-  }
+}
 .active-star {
     --tw-text-opacity: 1;
     color: rgba(245, 158, 11, var(--tw-text-opacity)) !important;
@@ -3078,16 +3090,19 @@ a[href*="intent"] {
 
 	.sm\:translate-y-0 {
 		--tw-translate-y: 0px;
+		transform: var(--tw-transform);
 	}
 
 	.sm\:scale-95 {
 		--tw-scale-x: .95;
 		--tw-scale-y: .95;
+		transform: var(--tw-transform);
 	}
 
 	.sm\:scale-100 {
 		--tw-scale-x: 1;
 		--tw-scale-y: 1;
+		transform: var(--tw-transform);
 	}
 
 	.sm\:grid-cols-2 {
@@ -3102,24 +3117,24 @@ a[href*="intent"] {
 		grid-template-rows: repeat(4, minmax(0, 1fr));
 	}
 
-	.sm\:items-center {
-		align-items: center;
-	}
-
 	.sm\:items-start {
 		align-items: flex-start;
 	}
 
-	.sm\:justify-between {
-		justify-content: space-between;
+	.sm\:items-center {
+		align-items: center;
+	}
+
+	.sm\:justify-start {
+		justify-content: flex-start;
 	}
 
 	.sm\:justify-center {
 		justify-content: center;
 	}
 
-	.sm\:justify-start {
-		justify-content: flex-start;
+	.sm\:justify-between {
+		justify-content: space-between;
 	}
 
 	.sm\:rounded-lg {
@@ -3257,6 +3272,11 @@ a[href*="intent"] {
 
 	.md\:border-l {
 		border-left-width: 1px;
+	}
+
+	.md\:px-12 {
+		padding-left: 3rem;
+		padding-right: 3rem;
 	}
 
 	.md\:px-4 {
