--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1521,6 +1521,11 @@ select {
 .w-1\/3 {
 	width: 33.333333%;
 }
+.w-max {
+	width: -webkit-max-content;
+	width: -moz-max-content;
+	width: max-content;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1727,6 +1732,11 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -3036,6 +3046,10 @@ a[href*="intent"] {
 		margin-right: 1rem;
 	}
 
+	.sm\:mb-0 {
+		margin-bottom: 0px;
+	}
+
 	.sm\:block {
 		display: block;
 	}
@@ -3210,6 +3224,10 @@ a[href*="intent"] {
 		grid-column: span 1 / span 1;
 	}
 
+	.md\:col-span-3 {
+		grid-column: span 3 / span 3;
+	}
+
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
@@ -3224,6 +3242,10 @@ a[href*="intent"] {
 
 	.md\:mt-auto {
 		margin-top: auto;
+	}
+
+	.md\:mb-0 {
+		margin-bottom: 0px;
 	}
 
 	.md\:block {
@@ -3250,12 +3272,20 @@ a[href*="intent"] {
 		width: 14rem;
 	}
 
+	.md\:w-full {
+		width: 100%;
+	}
+
 	.md\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
 	.md\:justify-start {
