--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1440,6 +1440,9 @@ select {
 .max-h-12 {
 	max-height: 3rem;
 }
+.max-h-screen {
+	max-height: 100vh;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -3149,6 +3152,10 @@ a[href*="intent"] {
 
 	.sm\:justify-between {
 		justify-content: space-between;
+	}
+
+	.sm\:whitespace-nowrap {
+		white-space: nowrap;
 	}
 
 	.sm\:rounded-lg {
